# bitterly

./: .gitignore  Cargo.toml  Makefile  README.md  max17261.txt
.github/workflows/: rust.yml
example/: max14748.rs
examples/: max14748.rs  max17261.rs
pdf2text/: max14748_36.txt  max14748_37.txt  max14748_38.txt  max14748_39.txt  max14748_40.txt  max14748_41.txt  max14748_42.txt  max14748_43.txt  max14748_44.txt  max14748_45.txt  max14748_46.txt  max14748_47.txt  max14748_48.txt  max14748_49.txt  max14748_50.txt  max14748_51.txt  max14748_52.txt  max14748_53.txt  max14748_54.txt  max14748_55.txt  max14748_56.txt  max14748_57.txt  max14748_58.txt  max14748_59.txt  max14748_60.txt  max14748_61.txt  max14748_62.txt  max14748_63.txt
src/: lib.rs
tests/: bitterly.rs  tests.rs
