[package]
name = "bitterly"
version = "0.2.0"
edition = "2021"
description = "No frills bit manipulation library"
repository = "https://github.com/BridgeSource/bitterly"
readme = "README.md"
keywords = ["embedded", "bit", "manipulation", "registers"]
authors = ["Austin McElroy <mcelroy.austin@gmail.com, amcelroy@bridgesourcemedical.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bitterly"
path = "./src/lib.rs"

[dependencies]
paste = "1.0.11"

