[package]
name = "bitterly"
version = "0.4.0"
edition = "2021"
description = Non-memory mapped bit manipulation library"
repository = "https://github.com/BridgeSource/bitterly"
readme = "README.md"
keywords = ["embedded", "bit", "manipulation", "registers"]
authors = ["Austin McElroy <mcelroy.austin@gmail.com, amcelroy@bridgesourcemedical.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bitterly"
path = "./src/lib.rs"

[[test]]
name = "bitterly"
path = "./tests/bitterly.rs"

[dependencies]
paste = "1.0"

